--- a/package.json
+++ b/package.json
@@ -11,31 +11,41 @@
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@headlessui/react": "^2.2.4",
     "@heroicons/react": "^2.2.0",
     "@paypal/checkout-server-sdk": "^1.0.3",
     "@paypal/react-paypal-js": "^8.8.3",
+    "@radix-ui/react-tooltip": "^1.2.7",
     "@reduxjs/toolkit": "^2.8.2",
+    "@tanstack/react-query": "^5.83.0",
     "argon2": "^0.43.0",
     "axios": "^1.10.0",
     "bcrypt": "^6.0.0",
+    "cloudinary": "^2.7.0",
     "clsx": "^2.1.1",
-    "dotenv": "^16.5.0",
+    "date-fns": "^4.1.0",
+    "dotenv": "^16.6.1",
     "former": "^0.5.0",
     "framer-motion": "^12.19.1",
+    "ioredis": "^5.6.1",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.523.0",
     "motion": "^12.18.1",
-    "next": "15.3.3",
+    "multer": "^2.0.1",
+    "next": "^15.3.5",
     "next-auth": "^4.24.11",
+    "next-connect": "^0.12.2",
     "react": "^19.0.0",
     "react-background-video-player": "^1.1.8",
     "react-dom": "^19.0.0",
     "react-focus-lock": "^2.13.6",
+    "react-hook-form": "^7.60.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-player": "^2.16.0",
     "react-redux": "^9.2.0",
     "react-scroll": "^1.9.3",
+    "redis": "^5.6.0",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
     "uuid": "^11.1.0"
